2021-08-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-prepared.el (octal-to-num): renamed to `ee-octal-to-num'.

	* eepitch.el (at-eepitch-target): deleted. It was a copy of
	`eepitch-eval-at-target-window', but with a bad name.
	(del-echo): renamed to `eepitch-del-echo'.

	* eev-on-windows.el (add-to-PATH): renamed to `ee-add-to-PATH'.

2021-08-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-0x0-url): new variable.
	(ee-0x0-upload-region, find-0x0-links): new functions.

	* eev-env.el: added a "(require 'eepitch)".

2021-08-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-vtermprocess): new function.
	(eepitch-vterm): use `find-vtermprocess'.

2021-08-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-wget-elisp): new function.
	(find-wgeta-elisp): new function.

2021-08-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-find-callprocess00-exit-status): new variable.
	(find-callprocess00-ne): use `ee-find-callprocess00-exit-status'.
	(find-wget): use `ee-find-callprocess00-exit-status'.
	(find-wgeta): new function.

2021-07-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): new function.
	(find-git-links): added "-" to the list of characters that are
	deleted to form the "{c}" argument to `code-c-d'.

2021-06-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tla.el (find-pdf-txt, find-pdf-txt-links)
	(ee-fnamepdf-to-fnametxt, find-pdf-text-insert): new functions.

	* eev-audiovideo.el (ee-find-mpv-audio): use "--start=mm:ss"
	instead of "--start mm:ss" (thanks to Erich Ruff for the bug fix!)

2021-06-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-xpdf-colon): new variable.
	(ee-find-xpdf-colon): new function.
	(ee-find-xpdf-page): use `ee-find-xpdf-colon'.
	(find-mupdf-page, ee-find-mupdf-page): new functions.
	(ee-find-mupdf-page-options): new variable.

	* eev-blinks.el (ee-struct-class, ee-struct-slot-names)